Improved listing and logger for angular
